# bnf-rs

./: Cargo.toml  README.md
.github/workflows/: format.yaml  lint.yaml  test.yaml
benches/: benchmark.rs
core/: Cargo.toml
core/src/: alternatives.rs  codify.rs  error.rs  generator.rs  grammar.rs  lib.rs  parser.rs  rule.rs  sppf.rs  term.rs  types.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: corpus.rs  lib.rs  playground.rs
tests/: test_corpus.rs  test_display.rs  test_generation.rs  test_parsing.rs  test_playground.rs
